--- a/index.html
+++ b/index.html
@@ -60,4 +60,14 @@
 	<button onclick="getInfo()">Get info with picture</button>
 	<button onclick="login()" id="login">Login</button>
 </body>
+<div class="fb-login-button" data-max-rows="1" data-size="icon" data-show-faces="true" data-auto-logout-link="false"></div>
+
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "https://connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v2.8&appId=1866035216951680";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 </html>
