--- a/index.html
+++ b/index.html
@@ -1,65 +1,100 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title></title>
-	<link rel="stylesheet" href="">
-</head>
-<body>
-	<script>
-		// initialize and setup facebook js sdk
-		window.fbAsyncInit = function() {
-		    FB.init({
-		      appId      : '1866035216951680',
-		      xfbml      : true,
-		      version    : 'v2.8'
-		    });
-		    FB.getLoginStatus(function(response) {
-		    	if (response.status === 'connected') {
-		    		document.getElementById('status').innerHTML = 'We are connected.';
-		    		document.getElementById('login').style.visibility = 'hidden';
-		    	} else if (response.status === 'not_authorized') {
-		    		document.getElementById('status').innerHTML = 'We are not logged in.'
-		    	} else {
-		    		document.getElementById('status').innerHTML = 'You are not logged into Facebook.';
-		    	}
-		    });
-		};
-		(function(d, s, id){
-		    var js, fjs = d.getElementsByTagName(s)[0];
-		    if (d.getElementById(id)) {return;}
-		    js = d.createElement(s); js.id = id;
-		    js.src = "https://connect.facebook.net/en_US/sdk.js";
-		    fjs.parentNode.insertBefore(js, fjs);
-		}(document, 'script', 'facebook-jssdk'));
-		
-		// login with facebook with extra permissions
-		function login() {
-			FB.login(function(response) {
-				if (response.status === 'connected') {
-		    		document.getElementById('status').innerHTML = 'We are connected.';
-		    		document.getElementById('login').style.visibility = 'hidden';
-		    	} else if (response.status === 'not_authorized') {
-		    		document.getElementById('status').innerHTML = 'We are not logged in.'
-		    	} else {
-		    		document.getElementById('status').innerHTML = 'You are not logged into Facebook.';
-		    	}
-			}, {scope: 'email'});
-		}
-		
-		// getting basic user info
-		function getInfo() {
-			FB.api('/me', 'GET', {fields: 'first_name,last_name,name,id,picture.width(150).height(150)'}, function(response) {
-				document.getElementById('status').innerHTML = "<img src='" + response.picture.data.url + "'>";
-			});
-		}
-	</script>
+<html >
+  <head>
+    <meta charset="UTF-8">
+    <title>Área de Login</title>
+    <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,600' rel='stylesheet' type='text/css'>
 
-	<div id="status"></div>
-	<button onclick="getInfo()">Get info with picture</button>
-	<button onclick="login()" id="login">Login</button>
-</body>
-<div class="fb-login-button" data-max-rows="1" data-size="icon" data-show-faces="true" data-auto-logout-link="false"></div>
+    <link rel="stylesheet" href="css/normalize.css">
 
+
+        <link rel="stylesheet" href="css/style.css">
+
+
+
+
+
+  </head>
+
+  <body>
+
+    <div class="form">
+
+      <ul class="tab-group">
+      <img src="http://i.imgur.com/XdXr3jA.png" width = 100%>
+        <button onclick="getInfo()">Get info with picture</button>
+        <button onclick="login()" id="login">Login</button>
+      <div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="true" data-auto-logout-link="false"></div>
+        <li class="tab active"><a href="#signup">Inscrever-se</a></li>
+        <li class="tab"><a href="#login">Entrar</a></li>
+      </ul>
+
+      <div class="tab-content">
+        <div id="signup">
+          <h1>Bem-Vindo</h1>
+
+
+          <div class="field-wrap">
+            <label>
+              Seu login<span class="req">*</span>
+            </label>
+            <input type="text"required autocomplete="off"/>
+          </div>
+
+          <div class="field-wrap">
+            <label>
+              Sua senha<span class="req">*</span>
+            </label>
+            <input type="password"required autocomplete="off"/>
+          </div>
+
+          <button type="submit" class="button button-block"/>Start</button>
+
+          </form>
+
+        </div>
+
+        <div id="login">
+          <h1>Bem-Vindo de volta!</h1>
+
+          <form action="/" method="post">
+
+            <div class="field-wrap">
+            <label>
+              Login<span class="req">*</span>
+            </label>
+            <input type="email"required autocomplete="off"/>
+          </div>
+
+          <div class="field-wrap">
+            <label>
+              Senha<span class="req">*</span>
+            </label>
+            <input type="password"required autocomplete="off"/>
+          </div>
+
+          <p class="forgot"><a href="#">Esqueceu a senha?</a></p>
+
+          <button class="button button-block"/>Entrar</button>
+
+          </form>
+
+        </div>
+
+      </div><!-- tab-content -->
+
+</div> <!-- /form -->
+        <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+        <script src="js/fbSDK.js"></script>
+        <script src="js/index.js"></script>
+
+
+
+
+  </body>
+  <div id="fb-root"></div>
+
+  <footer>
+    <h3><em>&copy2016 PUC-RIO</em></h3>
+  </footer>
 </html>
