--- a/index.html
+++ b/index.html
@@ -9,11 +9,6 @@
 
 
         <link rel="stylesheet" href="css/style.css">
-
-
-
-
-
   </head>
 
   <body>
@@ -24,7 +19,6 @@
       <img src="http://i.imgur.com/XdXr3jA.png" width = 100%>
         <button onclick="getInfo()">Get info with picture</button>
         <button onclick="login()" id="login">Login</button>
-      <div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="true" data-auto-logout-link="false"></div>
         <li class="tab active"><a href="#signup">Inscrever-se</a></li>
         <li class="tab"><a href="#login">Entrar</a></li>
       </ul>
@@ -85,9 +79,55 @@
 
 </div> <!-- /form -->
         <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-        <script src="js/fbSDK.js"></script>
         <script src="js/index.js"></script>
-
+<script>
+    // initialize and setup facebook js sdk
+    window.fbAsyncInit = function() {
+        FB.init({
+          appId      : '1866035216951680',
+          xfbml      : true,
+          version    : 'v2.8'
+        });
+        FB.getLoginStatus(function(response) {
+          if (response.status === 'connected') {
+            document.getElementById('status').innerHTML = 'We are connected.';
+            document.getElementById('login').style.visibility = 'hidden';
+          } else if (response.status === 'not_authorized') {
+            document.getElementById('status').innerHTML = 'We are not logged in.'
+          } else {
+            document.getElementById('status').innerHTML = 'You are not logged into Facebook.';
+          }
+        });
+    };
+    (function(d, s, id){
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) {return;}
+        js = d.createElement(s); js.id = id;
+        js.src = "https://connect.facebook.net/en_US/sdk.js";
+        fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+    
+    // login with facebook with extra permissions
+    function login() {
+      FB.login(function(response) {
+        if (response.status === 'connected') {
+            document.getElementById('status').innerHTML = 'We are connected.';
+            document.getElementById('login').style.visibility = 'hidden';
+          } else if (response.status === 'not_authorized') {
+            document.getElementById('status').innerHTML = 'We are not logged in.'
+          } else {
+            document.getElementById('status').innerHTML = 'You are not logged into Facebook.';
+          }
+      }, {scope: 'email'});
+    }
+    
+    // getting basic user info
+    function getInfo() {
+      FB.api('/me', 'GET', {fields: 'first_name,last_name,name,id,picture.width(150).height(150)'}, function(response) {
+        document.getElementById('status').innerHTML = "<img src='" + response.picture.data.url + "'>";
+      });
+    }
+    </script>
 
 
 
