--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html >
   <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Área de Login</title>
     <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,600' rel='stylesheet' type='text/css'>
 
@@ -9,6 +10,11 @@
 
 
         <link rel="stylesheet" href="css/style.css">
+
+
+
+
+
   </head>
 
   <body>
@@ -16,9 +22,6 @@
     <div class="form">
 
       <ul class="tab-group">
-      <img src="http://i.imgur.com/XdXr3jA.png" width = 100%>
-        <button onclick="getInfo()">Get info with picture</button>
-        <button onclick="login()" id="login">Login</button>
         <li class="tab active"><a href="#signup">Inscrever-se</a></li>
         <li class="tab"><a href="#login">Entrar</a></li>
       </ul>
@@ -26,6 +29,7 @@
       <div class="tab-content">
         <div id="signup">
           <h1>Bem-Vindo</h1>
+
 
 
           <div class="field-wrap">
@@ -75,13 +79,16 @@
 
         </div>
 
-      </div><!-- tab-content -->
+      </div>
+<div id="status"></div>
+  <button onclick="getInfo()">Get info with picture</button>
+  <button onclick="login()" id="login">Login</button>
+</div> 
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
-</div> <!-- /form -->
-        <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
         <script src="js/index.js"></script>
-<script>
-    // initialize and setup facebook js sdk
+        <script type="text/javascript">
+              // initialize and setup facebook js sdk
     window.fbAsyncInit = function() {
         FB.init({
           appId      : '1866035216951680',
@@ -127,14 +134,9 @@
         document.getElementById('status').innerHTML = "<img src='" + response.picture.data.url + "'>";
       });
     }
-    </script>
+        </script>
 
 
 
   </body>
-  <div id="fb-root"></div>
-
-  <footer>
-    <h3><em>&copy2016 PUC-RIO</em></h3>
-  </footer>
 </html>
