--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
 
       </div>
-<div id="status"></div>
+<center><div id="status"></div></center>
   <button onclick="getInfo()">Get info with picture</button>
   <button onclick="login()" id="login">Login</button>
 </div> 
