--- a/index.html
+++ b/index.html
@@ -80,9 +80,15 @@
         </div>
 
       </div>
+
+  <br>
+  <strong><center><button onclick="login()" id="login" class="btnn">LOGIN WITH FACEBOOK</button></center></strong>
+  <br>
+  <strong><center><button onclick="getInfo()" class="btnn">GET FACEBOOK'S PROFILE PICTURE</button></strong>
+  <br>
+  <br>
 <center><div id="status"></div></center>
-  <button onclick="getInfo()">Get info with picture</button>
-  <button onclick="login()" id="login">Login</button>
+
 </div> 
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
