--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <center><div id="status"></div></center>
 
 </div> 
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src='js/jquery-3.1.1.min.js'></script>
 
         <script src="js/index.js"></script>
         <script src="js/fbSDK.js"></script>
