--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       </div>
 
   <br>
-  <strong><center><button onclick="login()" class="btnn">LOGIN WITH FACEBOOK</button></center></strong>
+  <strong><center><button onclick="login()" id ="login" class="btnn">LOGIN WITH FACEBOOK</button></center></strong>
   <br>
   <strong><center><button onclick="getId()" class="btnn">YOUR FACEBOOK'S ID</button></center></strong>
   <br>
