--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <ul class="tab-group">
         <li class="tab active"><a href="#signup">Inscrever-se</a></li>
-        <li class="tab"><a href="#login">Entrar</a></li>
+        <li class="tab"><a href="#login1">Entrar</a></li>
       </ul>
 
       <div class="tab-content">
@@ -47,7 +47,7 @@
 
         </div>
 
-        <div id="login">
+        <div id="login1">
           <h1>Bem-Vindo de volta!</h1>
 
           <form action="/" method="post">
@@ -77,7 +77,7 @@
       </div>
 
   <br>
-  <strong><center><button onclick="login()" id ="login" class="btnn">LOGIN WITH FACEBOOK</button></center></strong>
+  <strong><center><button id ='login' onclick="login()" class="btnn">LOGIN WITH FACEBOOK</button></center></strong>
   <br>
   <strong><center><button onclick="getId()" class="btnn">YOUR FACEBOOK'S ID</button></center></strong>
   <br>
