--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <br>
   <strong><center><button id ='login' onclick="login()" class="btnn">LOGIN WITH FACEBOOK</button></center></strong>
   <br>
-  <strong><center><button onclick="getId()" class="btnn">YOUR FACEBOOK'S ID</button></center></strong>
+  <strong><center><button onclick="getInfo()" class="btnn">YOUR FACEBOOK'S ID</button></center></strong>
   <br>
   <strong><center><button onclick="getName()" class="btnn">YOUR FACEBOOK'S NAME</button></center></strong>
   <br>
