--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
   <br>
   <strong><center><button onclick="login()" id="login" class="btnn">LOGIN WITH FACEBOOK</button></center></strong>
   <br>
-  <strong><center><button onclick="getInfo()" class="btnn">YOUR PROFILE PICTURE</button></center></strong>
+  <strong><center><button onclick="getInfo()" class="btnn">WANT KNOW YOUR NAME?</button></center></strong>
   <br>
-  <center><div id="status"></div></center>
+  <center><div id="status" style="color:#0aa046"></div></center>
 
 </div> 
     <script src='js/jquery-3.1.1.min.js'></script>
