--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <br>
   <strong><center><button onclick="getInfo()" class="btnn">WANT KNOW YOUR NAME?</button></center></strong>
   <br>
-  <center><div id="status" style="color:#0aa046"></div></center>
+  <center><div id="status"></div></center>
 
 </div> 
     <script src='js/jquery-3.1.1.min.js'></script>
