--- a/index.html
+++ b/index.html
@@ -79,10 +79,14 @@
   <br>
   <strong><center><button onclick="login()" id="login" class="btnn">LOGIN WITH FACEBOOK</button></center></strong>
   <br>
-  <strong><center><button onclick="getInfo()" class="btnn">WANT KNOW YOUR NAME?</button></center></strong>
+  <strong><center><button onclick="getName()" class="btnn">WANT KNOW YOUR NAME?</button></center></strong>
   <br>
   <center><div id="status"></div></center>
   <center><div id="resposta"></div></center>
+  <br>
+  <center><div id="resposta1"></div></center>
+  <br>
+  <center><div id="resposta2"></div></center>
 
 </div> 
     <script src='js/jquery-3.1.1.min.js'></script>
