--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
   <br>
   <strong><center><button onclick="getName()" class="btnn">WANT KNOW YOUR NAME?</button></center></strong>
   <br>
+  <strong><center><button onclick="getId()" class="btnn">WANT KNOW YOUR ID?</button></center></strong>
+  <br>
   <center><div id="status"></div></center>
   <center><div id="resposta"></div></center>
   <br>
