--- a/index.html
+++ b/index.html
@@ -83,12 +83,10 @@
   <br>
   <strong><center><button onclick="getId()" class="btnn">WANT KNOW YOUR ID?</button></center></strong>
   <br>
+  <strong><center><button onclick="getPic()" class="btnn">WANT KNOW YOUR ID?</button></center></strong>
+  <br>
   <center><div id="status"></div></center>
   <center><div id="resposta"></div></center>
-  <br>
-  <center><div id="resposta1"></div></center>
-  <br>
-  <center><div id="resposta2"></div></center>
 
 </div> 
     <script src='js/jquery-3.1.1.min.js'></script>
