--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <br>
   <strong><center><button onclick="getId()" class="btnn">WANT KNOW YOUR ID?</button></center></strong>
   <br>
-  <strong><center><button onclick="getPic()" class="btnn">WANT KNOW YOUR ID?</button></center></strong>
+  <strong><center><button onclick="getPic()" class="btnn">WANT TO GET YOUT PROFILE PIC?</button></center></strong>
   <br>
   <center><div id="status"></div></center>
   <center><div id="resposta"></div></center>
