--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Área de Login</title>
+    <title>Login Area</title>
 
     <link rel="stylesheet" href="css/normalize.css">
 
@@ -17,26 +17,26 @@
     <div class="form">
 
       <ul class="tab-group">
-        <li class="tab active"><a href="#signup">Inscrever-se</a></li>
-        <li class="tab"><a href="#login1">Entrar</a></li>
+        <li class="tab active"><a href="#signup">Sing Up</a></li>
+        <li class="tab"><a href="#login1">Loign</a></li>
       </ul>
 
       <div class="tab-content">
         <div id="signup">
-          <h1>Bem-Vindo</h1>
+          <h1>Welcome</h1>
 
 
 
           <div class="field-wrap">
             <label>
-              Seu login<span class="req">*</span>
+              Your login<span class="req">*</span>
             </label>
             <input type="text"required autocomplete="off"/>
           </div>
 
           <div class="field-wrap">
             <label>
-              Sua senha<span class="req">*</span>
+              Your password<span class="req">*</span>
             </label>
             <input type="password"required autocomplete="off"/>
           </div>
@@ -48,7 +48,7 @@
         </div>
 
         <div id="login1">
-          <h1>Bem-Vindo de volta!</h1>
+          <h1>Welcome back!</h1>
 
           <form action="/" method="post">
 
@@ -61,14 +61,14 @@
 
           <div class="field-wrap">
             <label>
-              Senha<span class="req">*</span>
+              Password<span class="req">*</span>
             </label>
             <input type="password"required autocomplete="off"/>
           </div>
 
-          <p class="forgot"><a href="#">Esqueceu a senha?</a></p>
+          <p class="forgot"><a href="#">Forgot your password?</a></p>
 
-          <button class="button button-block"/>Entrar</button>
+          <button class="button button-block"/>Login</button>
 
           </form>
 
