--- a/2.html
+++ b/2.html
@@ -22,7 +22,12 @@
 
         <script src="js/index.js"></script>
         <script src="js/fbSDK.js"></script>
-
+<script type="text/javascript">
+  window.onload = function (){
+      FB.api('/me', 'GET', {fields: 'first_name,last_name,name,id,picture.width(150).height(150)'}, function(response) {
+        document.getElementById('nameFBresp').innerHTML = "Hello " + response.name + "!";
+      });
+</script>
 
   </body>
 </html>
