--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
 
         <script src="js/index.js"></script>
         <script src="js/fbSDK.js"></script>
-
+    <script type="text/javascript">
+      if (response.status === 'connected') {
+            window.location.href = "2.html";
+          }
+    </script>
   </body>
 </html>
