--- a/2.html
+++ b/2.html
@@ -13,7 +13,15 @@
   </head>
 
   <body>
+  <br>
+  <strong><center><button onclick="getName()" class="btnn">WANT KNOW YOUR NAME?</button></center></strong>
+  <br>
+  <strong><center><button onclick="getId()" class="btnn">WANT KNOW YOUR ID?</button></center></strong>
+  <br>
+  <strong><center><button onclick="getPic()" class="btnn">WANT TO GET YOUT PROFILE PIC?</button></center></strong>
+  <br>
   <h2 id="nameFBresp"><center></center></h2>
+  <center><div id="resposta"></div></center>
 
 
 
