--- a/2.html
+++ b/2.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="css/style.css">
         
   </head>
-
+  <h2 onload="SayName()" id="nameFBresp"><center></center></h2>
   <body>
   <br>
   <strong><center><button onclick="getName()" class="btnn">WANT KNOW YOUR NAME?</button></center></strong>
