--- a/2.html
+++ b/2.html
@@ -27,7 +27,7 @@
 
         <script src="js/index.js"></script>
         <script src="js/fbSDK.js"></script>
-<script type="text/javascript">
+<script type="text/javascript" src="js/fbSDK.js">
   window.onload = SayName ();
 </script>
 
