--- a/2.html
+++ b/2.html
@@ -6,8 +6,6 @@
     <title>User's Area</title>
 
     <link rel="stylesheet" href="css/normalize.css">
-
-
         <link rel="stylesheet" href="css/style.css">
         
   </head>
@@ -27,8 +25,8 @@
 
         <script src="js/index.js"></script>
         <script src="js/fbSDK.js"></script>
-<script type="text/javascript" src="js/fbSDK.js">
-  window.onload = SayName ();
+<script type="text/javascript">
+  SayName ();
 </script>
 
   </body>
