--- a/2.html
+++ b/2.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="css/style.css">
         
   </head>
-  <h2 id="nameFBresp"><center></center></h2>
+  <h2><center><div id="nameFBresp"></div></center></h2>
   <body>
   <br>
   <strong><center><button onclick="getName()" class="btnn">WANT KNOW YOUR NAME?</button></center></strong>
