--- a/user_area.html
+++ b/user_area.html
@@ -23,7 +23,7 @@
     <script src='js/jquery-3.1.1.min.js'></script>
     <script src="js/index.js"></script>
     <script src="js/fbSDK.js"></script>
-    <script type="text/javascript">
+    <script>
       SayName ();
     </script>
 
