--- a/user_area.html
+++ b/user_area.html
@@ -24,7 +24,7 @@
     <script src="js/index.js"></script>
     <script src="js/fbSDK.js"></script>
     <script>
-      SayName ();
+      getName ();
     </script>
 
   </body>
