--- a/user_area.html
+++ b/user_area.html
@@ -12,7 +12,7 @@
     <h2><center><div id="nameFBresp"></div></center></h2>
     <body>
     <br>
-    <strong><center><button onclick="getName()" class="btnn">WANT KNOW YOUR NAME?</button></center></strong>
+    <strong><center><button onload="getName()" class="btnn">WANT KNOW YOUR NAME?</button></center></strong>
     <br>
     <strong><center><button onclick="getId()" class="btnn">WANT KNOW YOUR ID?</button></center></strong>
     <br>
@@ -23,9 +23,6 @@
     <script src='js/jquery-3.1.1.min.js'></script>
     <script src="js/index.js"></script>
     <script src="js/fbSDK.js"></script>
-    <script>
-      getName ();
-    </script>
 
   </body>
 </html>
