--- a/user_area.html
+++ b/user_area.html
@@ -19,10 +19,31 @@
     <strong><center><button onclick="getPic()" class="btnn">WANT TO GET YOUT PROFILE PIC?</button></center></strong>
     <br>
     <center><div id="resposta"></div></center>
+    <center><div id="status"></div></center>
 
     <script src='js/jquery-3.1.1.min.js'></script>
     <script src="js/index.js"></script>
     <script src="js/fbSDK.js"></script>
-
+    <script type="text/javascript">
+        function login() {
+            FB.login(function(response) {
+                if (response.status === 'connected') {
+                    document.getElementById('status').innerHTML = 'We are connected.';
+                    document.getElementById('login').style.visibility = 'hidden';
+                    function getName() {
+            FB.api('/me', 'GET', {fields: 'first_name,last_name,name,id,picture.width(150).height(150)'}, function(response) {
+                document.getElementById('nameFBresp').innerHTML = "Hello " + response.name + "!";
+            });
+        }
+                } else if (response.status === 'not_authorized') {
+                    document.getElementById('status').innerHTML = 'We are not logged in.'
+                    window.location.href = "index.html";
+                } else {
+                    document.getElementById('status').innerHTML = 'You are not logged into Facebook.';
+                    window.location.href = "index.html";
+                }
+            }, {scope: 'email'});
+        }
+    </script>
   </body>
 </html>
