--- a/user_area.html
+++ b/user_area.html
@@ -18,8 +18,8 @@
     <br>
     <strong><center><button onclick="getPic()" class="btnn">WANT TO GET YOUT PROFILE PIC?</button></center></strong>
     <br>
-    <center><div id="resposta">!!</div></center>
-    <center><div id="status">!!</div></center>
+    <centerid id="resposta">!!</center>
+    <center id="status">!!</center>
 
     <script src='js/jquery-3.1.1.min.js'></script>
     <script src="js/index.js"></script>
