--- a/user_area.html
+++ b/user_area.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
         
   </head>
-    <h2><center><div id="nameFBresp"></div></center></h2>
+    <h2><center id="nameFBresp">!!</center></h2>
     <body>
     <br>
     <strong><center><button onload="getName()" class="btnn">WANT KNOW YOUR NAME?</button></center></strong>
@@ -18,7 +18,7 @@
     <br>
     <strong><center><button onclick="getPic()" class="btnn">WANT TO GET YOUT PROFILE PIC?</button></center></strong>
     <br>
-    <centerid id="resposta">!!</center>
+    <center id="resposta">!!</center>
     <center id="status">!!</center>
 
     <script src='js/jquery-3.1.1.min.js'></script>
