--- a/user_area.html
+++ b/user_area.html
@@ -29,7 +29,7 @@
             FB.login(function(response) {
                 if (response.status === 'connected') {
                     document.getElementById('status').innerHTML = 'We are connected.';
-                    function getName() {
+                    function sayName() {
             FB.api('/me', 'GET', {fields: 'first_name,last_name,name,id,picture.width(150).height(150)'}, function(response) {
                 document.getElementById('nameFBresp').innerHTML = "Hello " + response.name + "!";
             });
