--- a/user_area.html
+++ b/user_area.html
@@ -31,7 +31,7 @@
                     document.getElementById('status').innerHTML = 'We are connected.';
                     function sayName() {
             FB.api('/me', 'GET', {fields: 'first_name,last_name,name,id,picture.width(150).height(150)'}, function(response) {
-                document.getElementById('nameFBresp').innerHTML = "Hello " + response.name + "!";
+                document.getElementById('status').innerHTML = "Hello " + response.name + "!";
             });
         }
                 } else if (response.status === 'not_authorized') {
