--- a/user_area.html
+++ b/user_area.html
@@ -12,7 +12,7 @@
     <h2><center id="nameFBresp">!!</center></h2>
     <body>
     <br>
-    <strong><center><button onload="getName()" class="btnn">WANT KNOW YOUR NAME?</button></center></strong>
+    <strong><center><button onclick="getName()" class="btnn">WANT KNOW YOUR NAME?</button></center></strong>
     <br>
     <strong><center><button onclick="getId()" class="btnn">WANT KNOW YOUR ID?</button></center></strong>
     <br>
