--- a/user_area.html
+++ b/user_area.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
         
   </head>
-    <h2><center id="nameFBresp">!!</center></h2>
+    <h2><center id="nameFBresp"></center></h2>
     <body>
     <br>
     <strong><center><button onclick="getName()" class="btnn">WANT KNOW YOUR NAME?</button></center></strong>
@@ -18,11 +18,13 @@
     <br>
     <strong><center><button onclick="getPic()" class="btnn">WANT TO GET YOUT PROFILE PIC?</button></center></strong>
     <br>
-    <center id="resposta">!!</center>
-    <center id="status">!!</center>
+    <center id="resposta"></center>
 
     <script src='js/jquery-3.1.1.min.js'></script>
     <script src="js/index.js"></script>
     <script src="js/fbSDK.js"></script>
+    <script type="text/javascript">
+        sayName();
+    </script>
   </body>
 </html>
