--- a/user_area.html
+++ b/user_area.html
@@ -25,6 +25,8 @@
     <script src="js/fbSDK.js"></script>
     <script type="text/javascript">
         sayName();
+        FB.api('/me', 'GET', {fields: 'first_name,last_name,name,id,picture.width(150).height(150)'}, function(response) {
+                document.getElementById('resposta').innerHTML = "Hello " + response.name + "!";
     </script>
   </body>
 </html>
