--- a/user_area.html
+++ b/user_area.html
@@ -24,12 +24,8 @@
     <script src="js/index.js"></script>
     <script src="js/fbSDK.js"></script>
     <script type="text/javascript">
-        function testAPI(){
-            FB.api('/me', function(response){
-                $('#nameFBresp').append("<p>Hello "+response.name+"!</p>");
-                console.log(response);
-            });
-        }
+        login1();
+        alert(nameWel);
     </script>
   </body>
 </html>
