--- a/user_area.html
+++ b/user_area.html
@@ -10,7 +10,7 @@
         
   </head>
   <body>
-    <h2><center id="nameFBresp"></center></h2>
+    <center id="resposta"></center>
     <br>
     <strong><center><button onclick="getName()" class="btnn">WANT KNOW YOUR NAME?</button></center></strong>
     <br>
@@ -22,6 +22,8 @@
     <script src="js/fbSDK.js"></script>
     <script src='js/jquery-3.1.1.min.js'></script>
     <script src="js/index.js"></script>
+    <script type="text/javascript">
+        getName();
     </script>
   </body>
 </html>
