--- a/user_area.html
+++ b/user_area.html
@@ -10,7 +10,7 @@
         
   </head>
   <body>
-    <center id="resposta"></center>
+    <center id="resposta2"></center>
     <br>
     <strong><center><button onclick="getName()" class="btnn">WANT KNOW YOUR NAME?</button></center></strong>
     <br>
