--- a/user_area.html
+++ b/user_area.html
@@ -22,7 +22,7 @@
     <script src="js/fbSDK.js"></script>
     <script src='js/jquery-3.1.1.min.js'></script>
     <script src="js/index.js"></script>
-    <script type="text/javascript">
+    <script>
         getName();
     </script>
   </body>
