--- a/user_area.html
+++ b/user_area.html
@@ -10,7 +10,7 @@
         
   </head>
   <body>
-    <center id="resposta2"></center>
+    <center id="resposta2"><button onload="getName()"></button></center>
     <br>
     <strong><center><button onclick="getName()" class="btnn">WANT KNOW YOUR NAME?</button></center></strong>
     <br>
@@ -22,10 +22,5 @@
     <script src="js/fbSDK.js"></script>
     <script src='js/jquery-3.1.1.min.js'></script>
     <script src="js/index.js"></script>
-    <script>
-        window.onload = function (){
-         getName();
-            };
-    </script>
   </body>
 </html>
