--- a/user_area.html
+++ b/user_area.html
@@ -23,6 +23,24 @@
     <script src='js/jquery-3.1.1.min.js'></script>
     <script src="js/index.js"></script>
     <script type="text/javascript">
+          window.fbAsyncInit = function() {
+            FB.init({
+              appId      : 'your-app-id',
+              xfbml      : true,
+              version    : 'v2.8'
+            });
+            FB.AppEvents.logPageView();
+          };
+
+          (function(d, s, id){
+             var js, fjs = d.getElementsByTagName(s)[0];
+             if (d.getElementById(id)) {return;}
+             js = d.createElement(s); js.id = id;
+             js.src = "//connect.facebook.net/en_US/sdk.js";
+             fjs.parentNode.insertBefore(js, fjs);
+           }(document, 'script', 'facebook-jssdk'));
+    </script>
+    <script type="text/javascript">
         window.onload = function (){
              getName();
         };
