--- a/user_area.html
+++ b/user_area.html
@@ -22,5 +22,10 @@
     <script src="js/fbSDK.js"></script>
     <script src='js/jquery-3.1.1.min.js'></script>
     <script src="js/index.js"></script>
+    <script type="text/javascript">
+        window.onload = function (){
+            getName();
+        };
+    </script>
   </body>
 </html>
