--- a/user_area.html
+++ b/user_area.html
@@ -11,13 +11,6 @@
   </head>
   <body>
     <center id="resposta2"></center>
-    <br>
-    <strong><center><button onclick="getName()" class="btnn">WANT KNOW YOUR NAME?</button></center></strong>
-    <br>
-    <strong><center><button onclick="getId()" class="btnn">WANT KNOW YOUR ID?</button></center></strong>
-    <br>
-    <strong><center><button onclick="getPic()" class="btnn">WANT TO GET YOUT PROFILE PIC?</button></center></strong>
-    <br>
     <center id="resposta"></center>
     <script src="js/fbSDK.js"></script>
     <script src='js/jquery-3.1.1.min.js'></script>
@@ -25,6 +18,7 @@
     <script type="text/javascript">
         window.onload = function (){
             getName();
+            getPic();
         };
     </script>
   </body>
