--- a/user_area.html
+++ b/user_area.html
@@ -10,8 +10,8 @@
         
   </head>
   <body>
-    <strong><center id="resposta2"></center></strong>
-    <center id="resposta" class="IMGsrcFB"></center>
+    <strong><center id="resposta2" class="IMGsrcFB"></center></strong>
+    <center id="resposta"></center>
     <script src="js/fbSDK.js"></script>
     <script src='js/jquery-3.1.1.min.js'></script>
     <script src="js/index.js"></script>
