--- a/user_area.html
+++ b/user_area.html
@@ -6,7 +6,7 @@
     <title>User's Area</title>
 
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/users_area.css">
         
   </head>
   <body>
@@ -17,8 +17,8 @@
     <script src="js/index.js"></script>
     <script type="text/javascript">
         window.onload = function (){
-            getName();
             getPic();
+            getName();
         };
     </script>
   </body>
