--- a/user_area.html
+++ b/user_area.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <strong><center id="resposta2" class="IMGsrcFB"></center></strong>
-    <center id="resposta"></center>
+    <div id="resposta"></div>
     <script src="js/fbSDK.js"></script>
     <script src='js/jquery-3.1.1.min.js'></script>
     <script src="js/index.js"></script>
