--- a/user_area.html
+++ b/user_area.html
@@ -10,7 +10,7 @@
         
   </head>
   <body>
-    <strong><center id="resposta2" class="IMGsrcFB"></center></strong>
+    <div><strong><center id="resposta2" class="IMGsrcFB"></center></strong></div>
     <div id="resposta"></div>
     <script src="js/fbSDK.js"></script>
     <script src='js/jquery-3.1.1.min.js'></script>
