--- a/user_area.html
+++ b/user_area.html
@@ -6,7 +6,7 @@
     <title>User's Area</title>
 
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/users_area.css">
+    <link rel="stylesheet" href="css/user_area.css">
         
   </head>
   <body>
