--- a/user_area.html
+++ b/user_area.html
@@ -10,8 +10,10 @@
         
   </head>
   <body>
+  <div style="float: left; margin: 0px 0px 15px 15px;">
     <div><strong><center id="resposta2" class="IMGsrcFB"></center></strong></div>
     <div id="resposta"></div>
+    </div>
     <script src="js/fbSDK.js"></script>
     <script src='js/jquery-3.1.1.min.js'></script>
     <script src="js/index.js"></script>
