--- a/user_area.html
+++ b/user_area.html
@@ -12,9 +12,9 @@
   <body>
     <div><strong><center id="resposta" class="IMGsrcFB"></center></strong></div>
     <br>
-    <div id="resposta1"></div>
+    <center><div id="resposta1"></div></center>
     <br>
-    <div id="resposta2"></div>
+    <center><div id="resposta2"></div></center>
     <script src="js/fbSDK.js"></script>
     <script src='js/jquery-3.1.1.min.js'></script>
     <script src="js/index.js"></script>
