--- a/user_area.html
+++ b/user_area.html
@@ -1,21 +1,43 @@
 <!DOCTYPE html>
-<html >
-  <head>
+<html>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/user_area.css">
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>User's Area</title>
+    <title>FUT MARKET</title>
+</head>
+<body>
 
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/user_area.css">
-        
-  </head>
-  <body>
-    <div><strong><center id="resposta" class="IMGsrcFB"></center></strong></div>
-    <br>
-    <center><div id="resposta1"></div></center>
-    <br>
-    <center><div id="resposta2"></div></center>
-    <script src="js/fbSDK.js"></script>
+<ul>
+  <li><input id="myInp" type="text" name="search" placeholder="Search.."></li>
+  <li><center id="resposta"></center></li>
+  <li><h3><center><a href="#" id="resposta1"></a></center></h3></li>
+  <li><a href="home.html">Home</a></li>
+  <li><a href="teams.html">Teams</a></li>
+  <li><a href="portfolio.html">Portfolio</a></li>
+  <li><a class="active" href="firm.html">Your Firm</a></li>
+  <li><a href="next_games.html">Next Games</a></li>
+  <li><a href="rankings.html">Rankings</a></li>
+ <li><a href="#" id="icons" class="icons"><img src="imgs/settings.png" onmouseover="this.src='imgs/settingsGreen.png'" onmouseout="this.src='imgs/settings.png'"></a></li>
+  <li><a href="#" id="icons" class="icons"><img src="imgs/suitcase.png" onmouseover="this.src='imgs/suitcaseGreen.png'" onmouseout="this.src='imgs/suitcase.png'"></a></li>
+  <li><a href="#" id="icons" class="icons"><img src="imgs/sun-eclipse.png" onmouseover="this.src='imgs/sun-eclipseGreen.png'" onmouseout="this.src='imgs/sun-eclipse.png'"></a></li>
+</ul>
+
+<div class="ter">
+  <h2>Your Firm</h2>
+  <h3>xxxxxxxxxxxxxxxxxxxx</h3>
+  <p>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
+  <p>xxxxxxxxxxxx</p>
+  <p>xxxxx</p>
+  <p>xxxx</p>
+  <p>xxx</p>
+  <p>xx</p>
+  <p>x</p>
+</div>
+
+</body>
+<script src="js/fbSDK.js"></script>
     <script src='js/jquery-3.1.1.min.js'></script>
     <script src="js/index.js"></script>
     <script type="text/javascript">
@@ -25,5 +47,4 @@
             getId();
         };
     </script>
-  </body>
 </html>
