--- a/user_area.html
+++ b/user_area.html
@@ -13,10 +13,10 @@
   <li><input id="myInp" type="text" name="search" placeholder="Search.."></li>
   <li><center id="resposta"></center></li>
   <li><h3><center><a href="#" id="resposta1"></a></center></h3></li>
-  <li><a href="home.html">Home</a></li>
+  <li><a class="active" href="home.html">Home</a></li>
   <li><a href="teams.html">Teams</a></li>
   <li><a href="portfolio.html">Portfolio</a></li>
-  <li><a class="active" href="firm.html">Your Firm</a></li>
+  <li><a href="firm.html">Your Firm</a></li>
   <li><a href="next_games.html">Next Games</a></li>
   <li><a href="rankings.html">Rankings</a></li>
  <li><a href="#" id="icons" class="icons"><img src="imgs/settings.png" onmouseover="this.src='imgs/settingsGreen.png'" onmouseout="this.src='imgs/settings.png'"></a></li>
