--- a/user_area.html
+++ b/user_area.html
@@ -13,19 +13,19 @@
   <li><input id="myInp" type="text" name="search" placeholder="Search.."></li>
   <li><center id="resposta"></center></li>
   <li><h3><center><a href="#" id="resposta1"></a></center></h3></li>
-  <li><a class="active" href="home.html">Home</a></li>
-  <li><a href="teams.html">Teams</a></li>
-  <li><a href="portfolio.html">Portfolio</a></li>
-  <li><a href="firm.html">Your Firm</a></li>
-  <li><a href="next_games.html">Next Games</a></li>
-  <li><a href="rankings.html">Rankings</a></li>
+  <li><a class="active" href="#">Home</a></li>
+  <li><a href="#">Teams</a></li>
+  <li><a href="#">Portfolio</a></li>
+  <li><a href="#">Your Firm</a></li>
+  <li><a href="#">Next Games</a></li>
+  <li><a href="#">Rankings</a></li>
  <li><a href="#" id="icons" class="icons"><img src="imgs/settings.png" onmouseover="this.src='imgs/settingsGreen.png'" onmouseout="this.src='imgs/settings.png'"></a></li>
   <li><a href="#" id="icons" class="icons"><img src="imgs/suitcase.png" onmouseover="this.src='imgs/suitcaseGreen.png'" onmouseout="this.src='imgs/suitcase.png'"></a></li>
   <li><a href="#" id="icons" class="icons"><img src="imgs/sun-eclipse.png" onmouseover="this.src='imgs/sun-eclipseGreen.png'" onmouseout="this.src='imgs/sun-eclipse.png'"></a></li>
 </ul>
 
 <div class="ter">
-  <h2>Your Firm</h2>
+  <h2 id="resposta2"></h2>
   <h3>xxxxxxxxxxxxxxxxxxxx</h3>
   <p>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
   <p>xxxxxxxxxxxx</p>
@@ -45,6 +45,7 @@
             getPic();
             getName();
             getId();
+            getName2();
         };
     </script>
 </html>
