--- a/user_area.html
+++ b/user_area.html
@@ -25,7 +25,7 @@
 </ul>
 
 <div class="ter">
-  <h2 id="resposta2"></h2>
+  <center><h2 id="resposta2"></h2></center>
   <h3>xxxxxxxxxxxxxxxxxxxx</h3>
   <p>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
   <p>xxxxxxxxxxxx</p>
@@ -44,7 +44,6 @@
         window.onload = function (){
             getPic();
             getName();
-            getId();
             getName2();
         };
     </script>
