--- a/user_area.html
+++ b/user_area.html
@@ -26,14 +26,22 @@
 
 <div class="ter">
   <center><h2 id="resposta2"></h2></center>
-  <h3>xxxxxxxxxxxxxxxxxxxx</h3>
-  <p>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
-  <p>xxxxxxxxxxxx</p>
-  <p>xxxxx</p>
-  <p>xxxx</p>
-  <p>xxx</p>
-  <p>xx</p>
-  <p>x</p>
+  <h3>Congratulations, now you are part of FUTMARKET, make yourself comfortable.</h3>
+  <p>Now we will teach you the basics of this game.</p>
+  <p>Whats Your Favorite Soccer Team?</p>
+  <p>League:</p>
+  <br>
+    <select class="LeagueList">
+          <option value="BrLeague">Brazilian A League</option>
+    </select>
+  <p>Your Favorite Team:</p>
+  <br>
+    <select class="LeagueList">
+            <option value="Fla">Flamengo</option>
+            <option value="Bot">Botafogo</option>
+            <option value="Vas">Vasco</option>
+            <option value="Flu">Fluminense</option>
+    </select>
 </div>
 
 </body>
