--- a/user_area.html
+++ b/user_area.html
@@ -31,15 +31,56 @@
   <p>Whats Your Favorite Soccer Team?</p>
   <p>League:</p>
     <select class="LeagueList">
-          <option value="BrLeague">Brazilian A League</option>
+          <option value="BrLeague">Brazilian League</option>
     </select>
   <p>Your Favorite Team:</p>
-    <select class="LeagueList">
+    <select class="TeamBRList">
             <option value="Fla">Flamengo</option>
             <option value="Bot">Botafogo</option>
             <option value="Vas">Vasco</option>
             <option value="Flu">Fluminense</option>
+            <option value="Sp">São Paulo</option>
+            <option value="San">Santos</option>
+            <option value="Pal">Palmeiras</option>
+            <option value="Cor">Corinthias</option>
+            <option value="AtlMG">Atlético-MG</option>
+            <option value="Cru">Cruzeiro</option>
+            <option value="AtlPR">Atlético-PR</option>
+            <option value="Gre">Grêmio</option>
+            <option value="Int">Internacional</option>
+            <option value="Spo">Sport</option>
+            <option value="Cha">Chapecoense</option>
+            <option value="Bah">Bahia</option>
+            <option value="Vit">Vitória</option>
+            <option value="AmeMG">América-MG</option>
+            <option value="Coritiba">Coritiba</option>
+            <option value="Fig">Figueirense</option>
+            <option value="Pon">Ponte Preta</option>
+            <option value="Sta">Santa Cruz</option>
+            <option value="Goi">Goiás</option>
     </select>
+  <p>Your Favorite National Team:</p>
+    <select class="NtlTeams">
+            <option value="Arge">Argentina</option>
+            <option value="Belg">Belgium</option>
+            <option value="Braz">Brazil</option>
+            <option value="Chil">Chile</option>
+            <option value="Colo">Colombia</option>
+            <option value="Ecua">Ecuador</option>
+            <option value="Engl">England</option>
+            <option value="Fran">France</option>
+            <option value="Germ">Germany</option>
+            <option value="Gree">Greece</option>
+            <option value="Ital">Italy</option>
+            <option value="Mexi">Mexico</option>
+            <option value="Neth">Netherlands</option>
+            <option value="Para">Paraguay</option>
+            <option value="Port">Portugal</option>
+            <option value="Spai">Spain</option>
+            <option value="Swed">Sweden</option>
+            <option value="USA">United States</option>
+    </select>
+
 </div>
 
 </body>
