--- a/user_area.html
+++ b/user_area.html
@@ -27,14 +27,14 @@
 <div class="ter">
   <center><h2 id="resposta2"></h2></center>
   <h3>Congratulations, now you are part of FUTMARKET, make yourself comfortable.</h3>
-  <p>Now we will teach you the basics of this game.</p>
+  <p>We will teach you the basics of this game.</p>
   <p>Whats Your Favorite Soccer Team?</p>
   <p>League:</p>
-    <select class="LeagueList">
+    <select id="LeagueList">
           <option value="BrLeague">Brazilian League</option>
     </select>
   <p>Your Favorite Team:</p>
-    <select class="TeamBRList">
+    <select id="TeamBRList">
             <option value="Fla">Flamengo</option>
             <option value="Bot">Botafogo</option>
             <option value="Vas">Vasco</option>
@@ -60,10 +60,10 @@
             <option value="Goi">Goiás</option>
     </select>
   <p>Your Favorite National Team:</p>
-    <select class="NtlTeams">
+    <select id="NtlTeams">
             <option value="Arge">Argentina</option>
             <option value="Belg">Belgium</option>
-            <option value="Braz">Brazil</option>
+            <option value="Braz" selected>Brazil</option>
             <option value="Chil">Chile</option>
             <option value="Colo">Colombia</option>
             <option value="Ecua">Ecuador</option>
