--- a/user_area.html
+++ b/user_area.html
@@ -28,7 +28,7 @@
   <center><h2 id="resposta2"></h2></center>
   <h3>Congratulations, now you are part of FUTMARKET, make yourself comfortable.</h3>
   <p>We will teach you the basics of this game.</p>
-  <p>Whats Your Favorite Soccer Team?</p>
+  <p>Chose your favorite Team and National Team.</p>
   <p>League:</p>
     <select id="LeagueList">
           <option value="BrLeague">Brazilian League</option>
