--- a/user_area.html
+++ b/user_area.html
@@ -47,7 +47,7 @@
             <option value="Cor">Corinthias</option>
             <option value="AtlMG">Atlético-MG</option>
             <option value="Cru">Cruzeiro</option>
-            <option value="AtlPR">Atlético-PR</option>
+            <option value="AltPR">Atlético-PR</option>
             <option value="Gre">Grêmio</option>
             <option value="Int">Internacional</option>
             <option value="Spo">Sport</option>
