--- a/user_area.html
+++ b/user_area.html
@@ -61,7 +61,7 @@
             <option value="Sta">Santa Cruz</option>
             <option value="Goi">Goiás</option>
     </select>
-    <div id="escudoTime"></div>
+    <div id="escudoTime" style="margin-top:10px;"></div>
   <p>Your Favorite National Team:</p>
     <select id="NtlTeams">
             <option disabled selected value>Choose Your National Team</option>
