--- a/user_area.html
+++ b/user_area.html
@@ -34,7 +34,7 @@
         <option disabled selected value>Choose Your League</option>
         <option value="BrLeague">Brazilian League</option>
     </select>
-    <div id='FavBRTeam'>
+    <div id='FavBRTeam' class='hidden'>
     <p>Your Favorite Team:</p>
     <select id="TeamBRList" onchange="check()">
             <option disabled selected value>Choose Your Team</option>
