--- a/user_area.html
+++ b/user_area.html
@@ -65,12 +65,13 @@
     </div>
     <div id="escudoTime" style="margin-top:10px;"></div>
   <p>Your Favorite National Team:</p>
-    <select id="NtlTeams">
+    <select id="NtlTeams" onchange="check2()">
             <option disabled selected value>Choose Your National Team</option>
             <option value="Arge">Argentina</option>
             <option value="Belg">Belgium</option>
             <option value="Braz">Brazil</option>
             <option value="Chil">Chile</option>
+            <option value="Chin">China</option>
             <option value="Colo">Colombia</option>
             <option value="Ecua">Ecuador</option>
             <option value="Engl">England</option>
@@ -84,8 +85,11 @@
             <option value="Port">Portugal</option>
             <option value="Spai">Spain</option>
             <option value="Swed">Sweden</option>
+            <option value="Swit">Switzerland</option>
             <option value="USA">United States</option>
+            <option value="Swed">Uruguay</option>
     </select>
+    <div id="escudoSelecao" style="margin-top:20px;"></div>
 
 </div>
 
