--- a/user_area.html
+++ b/user_area.html
@@ -86,8 +86,8 @@
             <option value="Spai">Spain</option>
             <option value="Swed">Sweden</option>
             <option value="Swit">Switzerland</option>
+            <option value="Urua">Uruguay</option>
             <option value="USA">United States</option>
-            <option value="Swed">Uruguay</option>
     </select>
     <div id="escudoSelecao" style="margin-top:20px;"></div>
 
