--- a/user_area.html
+++ b/user_area.html
@@ -94,6 +94,7 @@
 </div>
 
 </body>
+    <link rel="preload" as="image" href="Flags">
     <script src="js/fbSDK.js"></script>
     <script src="js/select_team.js"></script>
     <script src='js/jquery-3.1.1.min.js'></script>
