--- a/user_area.html
+++ b/user_area.html
@@ -2,6 +2,10 @@
 <html>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/user_area.css">
+  <script src="js/fbSDK.js"></script>
+  <script src="js/select_team.js"></script>
+  <script src='js/jquery-3.1.1.min.js'></script>
+  <script src="js/index.js"></script>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -94,11 +98,7 @@
 </div>
 
 </body>
-    <script src="js/fbSDK.js"></script>
-    <script src="js/select_team.js"></script>
-    <script src='js/jquery-3.1.1.min.js'></script>
-    <script src="js/index.js"></script>
-    <script type="text/javascript" id="testss">
+    <script type="text/javascript">
         window.onload = function (){
             getPic();
             getName();
