--- a/first_time.html
+++ b/first_time.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/user_area.css">
+  <link rel="stylesheet" href="css/first_time.css">
   <script src="js/fbSDK.js"></script>
   <script src="js/select_team.js"></script>
   <script src='js/jquery-3.1.1.min.js'></script>
