--- a/first_time.html
+++ b/first_time.html
@@ -30,8 +30,9 @@
 
 <div class="ter">
   <center><h2 id="resposta2"></h2></center>
-  <h3>Congratulations, now you are part of FUTMARKET, make yourself comfortable.</h3>
+  <center><h3>Congratulations, now you are part of FUTMARKET, make yourself comfortable.</h3></center>
   <p>We will teach you the basics of this game.</p>
+  <p>FUTMARKET is a fantasy market game based on soccer. It work the same way as a normal stock market, but instead of buying real company's stocks, you are going to buy some soccer team stocks. Create your own portfolio, buying and selling stocks of a National Team or some real soccer team. Join up with friends, creating firms, where you can manage hedge funds, putting together money from all of you. Start now!</p>
   <p>Chose your favorite Team and National Team.</p>
   <p>League:</p>
     <select id="LeagueList" onchange="check1()">
