--- a/first_time.html
+++ b/first_time.html
@@ -69,7 +69,7 @@
     </select>
     </div>
     <div id="escudoTime" style="margin-top:10px;"></div>
-  <p>Your Favorite National Team:</p>
+  <p class="pre_load2">Your Favorite National Team:</p>
     <select id="NtlTeams" onchange="check2()">
             <option disabled selected value>Choose Your National Team</option>
             <option value="Arge">Argentina</option>
@@ -99,7 +99,7 @@
 </div>
 
 </body>
-    <script type="text/javascript">
+    <script type="text/javascript" class="pre_load3">
         window.onload = function (){
             getPic();
             getName();
