--- a/first_time.html
+++ b/first_time.html
@@ -100,9 +100,11 @@
 
 </body>
     <script type="text/javascript" class="pre_load3">
+        window.onload = function (){
             getPic();
             getName();
             getName2();
             check1();
+        };
     </script>
 </html>
