--- a/first_time.html
+++ b/first_time.html
@@ -6,6 +6,7 @@
   <script src="js/select_team.js"></script>
   <script src='js/jquery-3.1.1.min.js'></script>
   <script src="js/index.js"></script>
+  <script src="js/first_timedp.js"></script>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -29,6 +30,7 @@
 </ul>
 
 <div class="ter">
+<div id="first_page">
   <center><h2 id="resposta2"></h2></center>
   <center><h3>Congratulations, now you are part of FUTMARKET, make yourself comfortable.</h3></center>
   <p>We will teach you the basics of this game.</p>
@@ -95,6 +97,10 @@
             <option value="Urua">Uruguay</option>
     </select>
     <div id="escudoSelecao" style="margin-top:20px;"></div>
+    <br><br>
+    </div>
+    <button id="previous">PREVIOUS</button>
+    <button id="next">NEXT</button>
 
 </div>
 
