--- a/first_time.html
+++ b/first_time.html
@@ -99,7 +99,7 @@
     <div id="escudoSelecao" style="margin-top:20px;"></div>
     <br><br>
     </div>
-    <button id="previous">PREVIOUS</button>
+    <button id="previous" class="hidden">PREVIOUS</button>
     <button id="next">NEXT</button>
 
 </div>
