--- a/first_time.html
+++ b/first_time.html
@@ -99,6 +99,12 @@
     <div id="escudoSelecao" style="margin-top:20px;"></div>
     <br><br>
     </div>
+    <div id="second_page" class="hidden">
+      <h1><center>We want to know a little bit more about you</center></h1>
+      <br>
+        <h3>If you had a firm how should you call it?</h3>
+        <input type="text" name="firmName">
+    </div>
     <button id="previous" class="hidden">PREVIOUS</button>
     <button id="next">NEXT</button>
 
