--- a/first_time.html
+++ b/first_time.html
@@ -105,6 +105,11 @@
         <h3>If you had a firm how should you call it?</h3>
         <input type="text" name="firmName">
     </div>
+    <div id="third_page" class="hidden">
+      <h1><center>Last step before you start</center></h1>
+      <br>
+        <h3>..and enjoy the game!</h3>
+    </div>
     <button id="previous" class="hidden">PREVIOUS</button>
     <button id="next">NEXT</button>
 
