--- a/first_time.html
+++ b/first_time.html
@@ -18,7 +18,7 @@
   <li><input id="myInp" type="text" name="search" placeholder="Search.."></li>
   <li><center id="resposta"></center></li>
   <li><h3><center><a href="#" id="resposta1"></a></center></h3></li>
-  <li><a class="active" href="#">Home</a></li>
+  <li><a href="home.html">Home</a></li>
   <li><a href="#">Teams</a></li>
   <li><a href="#">Portfolio</a></li>
   <li><a href="#">Your Firm</a></li>
@@ -112,6 +112,9 @@
     </div>
     <button id="previous" class="hidden">PREVIOUS</button>
     <button id="next">NEXT</button>
+    <br>
+    <br>
+    <center><button id="start" class="hidden"><a href="home.html" style="color:white;text-decoration:none">START</a></button></center>
 
 </div>
 
