--- a/first_time.html
+++ b/first_time.html
@@ -114,7 +114,7 @@
     <button id="next">NEXT</button>
     <br>
     <br>
-    <center><button id="start" class="hidden"><a href="home" style="color:white;text-decoration:none">START</a></button></center>
+    <center><button id="start" class="hidden"><a href="home.html" style="color:white;text-decoration:none">START</a></button></center>
 
 </div>
 
