--- a/first_time.html
+++ b/first_time.html
@@ -114,7 +114,7 @@
     <button id="next">NEXT</button>
     <br>
     <br>
-    <center><a href="home.html" style="color:white;text-decoration:none"><button id="start" class="hidden">START</button></a></center>
+    <center><a href="home.html" style="text-decoration:none"><button id="start" class="hidden" style="color:white;">START</button></a></center>
 
 </div>
 
