--- a/first_time.html
+++ b/first_time.html
@@ -18,7 +18,7 @@
   <li><input id="myInp" type="text" name="search" placeholder="Search.."></li>
   <li><center id="resposta"></center></li>
   <li><h3><center><a href="#" id="resposta1"></a></center></h3></li>
-  <li><a href="home">Home</a></li>
+  <li><a href="home/">Home</a></li>
   <li><a href="#">Teams</a></li>
   <li><a href="#">Portfolio</a></li>
   <li><a href="#">Your Firm</a></li>
@@ -114,7 +114,7 @@
     <button id="next">NEXT</button>
     <br>
     <br>
-    <center><a href="home" style="text-decoration:none"><button id="start" class="hidden" style="color:white;">START</button></a></center>
+    <center><a href="home/" style="text-decoration:none"><button id="start" class="hidden" style="color:white;">START</button></a></center>
 
 </div>
 
