--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
           <div class="field-wrap">
             <label>
-              Repeat your password<span class="req">*</span>
+              Confirm your password<span class="req">*</span>
             </label>
             <input type="password"required autocomplete="off"/>
           </div>
