--- a/home.html
+++ b/home.html
@@ -30,6 +30,17 @@
     </ul>
 
     <div class="ter">
+      <div style="background-color:red; width:50%; height:50%; float:left">
+</div>
+
+<div style="background-color:blue; width:50%; height:50%; float:right">
+</div>
+
+<div style="background-color:green; width:50%; height:50%; float:left">
+</div>
+
+<div style="background-color:orange; width:50%; height:50%; float:right">
+</div>
       
     </div>
 
