--- a/first_time.html
+++ b/first_time.html
@@ -16,8 +16,8 @@
 
 <div class="ter">
 <div id="first_page">
-  <span id="resposta"  class="pre_load2" style="vertical-align: middle; margin-top: 20px; margin-left: 360px;"></span>
-   <span id="resposta2"></span>
+  <center><div id="resposta"  class="pre_load2"></div></center>
+   <center><div id="resposta2"></div></center>
    <div id="WelText">
     <center><h3>Congratulations, now you are part of FUTMARKET, make yourself comfortable.</h3></center>
     <p>We will teach you the basics of this game.</p>
