--- a/first_time.html
+++ b/first_time.html
@@ -16,7 +16,7 @@
 
 <div class="ter">
 <div id="first_page">
-  <center><div id="resposta"  class="pre_load2"></div></center>
+   <center id="resposta" class="pre_load2"><div></div></center>
    <center><div id="resposta2"></div></center>
    <div id="WelText">
     <center><h2>Congratulations, now you are part of FUTMARKET, make yourself comfortable.</h2></center>
